Solve contrast issues

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@ body {
   font-family: "Open Sans Condensed", sans-serif !important;
 }
 
+h1,
+h2,
+h3,
+h4 {
+  font-weight: bold !important;
+}
+
 p {
   font-size: 1.4rem !important;
   line-height: 1.7;
